--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -52,24 +52,51 @@
 }
 
 .reviews__control {
+  position: relative;
+
   @include no-margin-no-padding;
   @include hide-text-content;
 
   flex: 1;
   height: 52px;
 
-  background-color: $white;
   border: solid 1px $gray-light;
 
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-
-  &--left {
+  &--left::after {
     background-image: url("../img/icon-left-arrow.svg");
   }
 
-  &--right {
+  &--right::after {
     background-image: url("../img/icon-right-arrow.svg");
+  }
+
+  &::after {
+    content: "";
+
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+
+    width: 50px;
+    height: 26px;
+
+    background-color: $white;
+
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+  }
+
+  &:hover {
+    &::after {
+      opacity: 0.6;
+    }
+  }
+
+  &:active {
+    &::after {
+      opacity: 0.3;
+    }
   }
 }
 
