--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -136,7 +136,9 @@
   .main-nav__logo {
     width: auto;
     min-width: 149px;
+
     padding: 0;
+    margin-right: auto;
 
     align-items: center;
     justify-content: flex-start;
