--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -3,6 +3,11 @@
   width: 100%;
 }
 
+.order-form__wrapper {
+  // display: flex;
+  // flex-direction: column;
+}
+
 .order-form__note {
   margin: 17px 0 22px;
 
@@ -29,6 +34,7 @@
 
 .order-form__input-wrapper {
   position: relative;
+  width: 100%;
 }
 
 .order-form__legend {
@@ -54,6 +60,8 @@
 }
 
 .order-form__input-group {
+  width: 100%;
+
   display: flex;
   flex-direction: column;
 
@@ -119,8 +127,15 @@
     color: $black;
 
     background-color: transparent;
-    box-shadow: inset 0 -2px 0 0 #000000;
+    box-shadow: inset 0 -2px 0 0 $black;
     border: none;
+
+    outline: none;
+
+    &:hover,
+    &:focus {
+      box-shadow: inset 0px -2px 0 0 $seafoam-blue;
+    }
 
     &::placeholder {
       opacity: 0.3;
@@ -168,20 +183,31 @@
   border-radius: 50%;
   border: solid 2px $greyish-brown;
 
+  cursor: pointer;
+
+  &:hover {
+    border: solid 2px $seafoam-blue;
+  }
+
+  &:active {
+    border: solid 2px rgba($greyish-brown, 0.3);
+  }
+
   &::after {
-    position: absolute;
     content: "";
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
 
     display: none;
 
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, -50%, 0);
-
     width: 16px;
     height: 16px;
-    background-color: #62d1ba;
+    background-color: $seafoam-blue;
     border-radius: 50%;
+
+    transform: translate3d(-50%, -50%, 0);
   }
 }
 
@@ -195,11 +221,19 @@
   width: 40px;
   height: 40px;
 
-  overflow: hidden;
-
   background-color: transparent;
-  // border-radius: 50%;
   border: solid 2px $greyish-brown;
+
+  &:hover {
+    border: solid 2px $seafoam-blue;
+  }
+
+  &:active {
+    border: solid 2px rgba($greyish-brown, 0.3);
+  }
+
+  overflow: hidden;
+  cursor: pointer;
 }
 
 .order-form__textarea {
@@ -219,6 +253,14 @@
   background-color: $white;
 
   color: $greyish-brown;
+
+  &:hover {
+    border: solid 2px $seafoam-blue;
+  }
+
+  &:active {
+    border: solid 2px rgba($greyish-brown, 0.3);
+  }
 }
 
 .order-form__small {
