--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -1,16 +1,27 @@
-body {
+html {
   position: relative;
+
+  margin: 0;
+  padding: 0;
+
+  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
+}
+
+body {
+  min-width: 100%;
+  max-width: 100%;
+  width: 100%;
+
+  margin: 0;
+  padding: 0;
 
   display: flex;
   flex-direction: column;
 
   justify-content: center;
   align-items: center;
-
-  max-width: 1150px;
-
-  margin: 0 auto;
-  padding: 0;
 
   font-family: $font-family-default;
   font-weight: $font-weight-default;
@@ -34,4 +45,10 @@ a {
 input,
 textarea {
   font-family: inherit;
+}
+
+@media (min-width: $desktop-width) {
+  body {
+    max-width: 1150px;
+  }
 }
