--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -19,7 +19,7 @@
     justify-content: flex-start;
 
     min-height: 490px;
-    padding-top: 73px;
+    padding-top: 68px;
     padding-bottom: 0;
 
     background-color: $gray-light;
@@ -43,7 +43,7 @@
   padding: 0;
 
   font-size: 27px;
-  line-height: 1.11;
+  line-height: 1.16;
   font-weight: $font-weight-bold;
   color: $very-dark-brown;
   letter-spacing: 0.2px;
@@ -64,7 +64,7 @@
 
     &--hero {
       min-height: 746px;
-      padding-top: 161px;
+      padding-top: 154px;
       padding-bottom: 0;
       background-image: url("../img/hero-tablet@1x.jpg");
 
@@ -80,6 +80,8 @@
     &--hero {
       padding: 0 64px;
       max-width: 660px;
+
+      letter-spacing: -0.4px;
     }
   }
 
