--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -5,6 +5,7 @@ $gray-light: #f1f1f1;
 
 $black: #000000;
 $very-dark-brown: #010000;
+$very-light-brown: #c6c6c6;
 $greyish-brown: #444444;
 $seafoam-blue: #63d1bb;
 $seafoam-blue-two: #59d5bc;
