--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -35,15 +35,14 @@
   margin: 0;
 
   transform: translate3d(-50%, -50%, 0);
-
-  box-shadow: 0px 5px 10px 0 rgba(0, 1, 1, 0.25);
-  border: solid 1px #c6c6c6;
-  background-color: #fff;
+  box-shadow: 0 5px 10px 0 rgba(0, 1, 1, 0.25);
+  border: solid 1px $very-light-brown;
+  background-color: $white;
 }
 
 .modal__title {
   max-width: 150px;
-  margin: 0px auto 15px;
+  margin: 0 auto 15px;
 
   font-size: 25px;
   font-weight: $font-weight-bold;
