--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -3,11 +3,6 @@
   width: 100%;
 }
 
-.order-form__wrapper {
-  // display: flex;
-  // flex-direction: column;
-}
-
 .order-form__note {
   margin: 17px 0 22px;
 
@@ -134,7 +129,7 @@
 
     &:hover,
     &:focus {
-      box-shadow: inset 0px -2px 0 0 $seafoam-blue;
+      box-shadow: inset 0 -2px 0 0 $seafoam-blue;
     }
 
     &::placeholder {
