--- a/source/sass/blocks/product-stats.scss
+++ b/source/sass/blocks/product-stats.scss
@@ -3,11 +3,11 @@
   width: 100%;
   border-spacing: 0;
 
-  margin-bottom: 32px;
+  margin-bottom: 25px;
 
   td {
     border-bottom: 1px solid $gray-light;
-    padding: 11px 0 10px 2px;
+    padding: 11px 0 10px 0;
   }
 }
 
