--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -44,14 +44,14 @@
 
     position: absolute;
     top: 0;
-    left: -50%;
+    left: 0;
 
-    width: 200%;
-    height: 24px;
+    width: 100%;
+    height: 15px;
 
     background-image: url("../img/bg-zigzag-line.svg");
-    background-position: 50%;
-    background-size: auto 15px;
+    background-position: 0;
+    background-size: auto 100%;
     background-repeat: repeat-x;
   }
 }
