--- a/source/sass/blocks/product-stats.scss
+++ b/source/sass/blocks/product-stats.scss
@@ -1,14 +1,15 @@
 .product-stats {
-  border-collapse: separate;
   width: 100%;
   border-spacing: 0;
 
   margin-bottom: 25px;
+  border-collapse: separate;
+}
 
-  td {
-    border-bottom: 1px solid $gray-light;
-    padding: 11px 0 10px 0;
-  }
+.product-stats__title,
+.product-stats__value {
+  border-bottom: 1px solid $gray-light;
+  padding: 11px 0 10px 0;
 }
 
 .product-stats__title {
@@ -19,13 +20,17 @@
   .product-stats__title {
     min-width: 66px;
   }
+
+  .product-stats__title,
+  .product-stats__value {
+    padding: 9px 0 10px;
+  }
 }
 
 @media (min-width: $desktop-width) {
   .product-stats {
-    border-collapse: separate;
     width: 100%;
-    border-spacing: 0;
+
     margin-bottom: 84px;
   }
 }
