--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -51,7 +51,7 @@
 
 @media (min-width: $desktop-width) {
   .footer {
-    padding: 32px 50px 32px;
+    padding: 25px 50px;
   }
 
   .footer__copyright {
