--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -77,17 +77,17 @@
 
   .product-card__info {
     flex-basis: 50%;
-    padding: 22px 32px 26px 25px;
+    padding: 25px 32px 26px 25px;
   }
 
   .product-card__title {
-    max-width: 245px;
-    margin-bottom: 12px;
+    max-width: 235px;
+    margin-bottom: 10px;
 
     font-size: 20px;
     font-weight: $font-weight-bold;
-
-    letter-spacing: 1.2px;
+    letter-spacing: 0.1px;
+    line-height: 1.3;
   }
 
   .product-card__size {
@@ -111,6 +111,14 @@
 }
 
 @media (min-width: $desktop-width) {
+  .product-card__info {
+    padding: 20px 32px 26px 25px;
+  }
+
+  .product-card__size {
+    letter-spacing: 0px;
+  }
+
   .product-card__image {
     max-height: none;
     height: 462px;
@@ -124,14 +132,21 @@
   }
 
   .product-card__title {
-    margin: 0 0 7px 0;
+    margin: 0 0 8px;
+    line-height: 1.2;
   }
 
   .product-card__info {
     min-height: 197px;
   }
 
+  .product-card__price {
+    line-height: 2;
+  }
+
   .product-card__footer {
+    padding-top: 0;
     padding-left: 0;
+    padding-right: 0;
   }
 }
