--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -171,14 +171,14 @@
   }
 
   .contacts__link {
-    letter-spacing: 0px;
+    letter-spacing: 0;
   }
 
   .contacts__text,
   .contacts__value {
     padding-right: 0;
 
-    letter-spacing: 0px;
+    letter-spacing: 0;
   }
 
   .contacts__row {
