--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -25,7 +25,7 @@
   line-height: 2;
   color: $greyish-brown;
 
-  letter-spacing: 0px;
+  letter-spacing: 0;
 }
 
 .reviews__author {
@@ -131,7 +131,7 @@
 
     font-size: 17px;
     line-height: 1.86;
-    letter-spacing: 0px;
+    letter-spacing: 0;
   }
 
   .reviews__author {
