--- a/source/sass/blocks/how-its-done.scss
+++ b/source/sass/blocks/how-its-done.scss
@@ -94,7 +94,7 @@
     margin-bottom: 35px;
 
     font-size: 15px;
-    letter-spacing: 0px;
+    letter-spacing: 0;
   }
 
   .how-its-done__button-wrapper {
