--- a/source/sass/blocks/product-of-week.scss
+++ b/source/sass/blocks/product-of-week.scss
@@ -12,7 +12,7 @@
   color: $black;
   margin: 0;
   padding: 0;
-  letter-spacing: 0px;
+  letter-spacing: 0;
 }
 
 .product-of-week__subtitle {
@@ -21,7 +21,7 @@
   color: $seafoam-blue;
 
   text-transform: uppercase;
-  letter-spacing: 0px;
+  letter-spacing: 0;
 }
 
 .product-of-week__description {
