--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -50,13 +50,17 @@
     height: 15px;
 
     background-image: url("../img/bg-zigzag-line.svg");
-    background-position: 0;
-    background-size: auto 100%;
+    background-position: 30px 0;
+    background-size: 100% 100%;
     background-repeat: repeat-x;
   }
 
   @media (min-width: $desktop-width) {
     &::before {
+      left: 50%;
+      transform: translateX(-50%);
+
+      max-width: 1052px;
       height: 23px;
     }
   }
