--- a/source/sass/blocks/product-of-week.scss
+++ b/source/sass/blocks/product-of-week.scss
@@ -149,9 +149,11 @@
   .product-of-week__subtitle {
     position: absolute;
 
-    left: -126px;
-    top: 12px;
-    letter-spacing: -0.6px;
+    top: 17px;
+    left: -129px;
+
+    letter-spacing: -0.2px;
+    line-height: 1;
   }
 
   .product-of-week__description {
