--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -50,8 +50,8 @@
     height: 15px;
 
     background-image: url("../img/bg-zigzag-line.svg");
-    background-position: 30px 0;
-    background-size: 100% 100%;
+    background-position: 0 0;
+    background-size: 100% 105%;
     background-repeat: repeat-x;
   }
 
