--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -108,10 +108,10 @@
   .reviews {
     position: relative;
 
-    // padding: 80px 51px 123px;
     padding: 80px 51px 53px;
     margin-bottom: 70px;
 
+    background-color: $white;
     background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
     background-position: 0 50%;
