--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -3,6 +3,7 @@ $white: #ffffff;
 $gray-dark: #ececec;
 $gray-light: #f1f1f1;
 
+$very-light-white: #f9f9f9;
 $black: #000000;
 $very-dark-brown: #010000;
 $very-light-brown: #c6c6c6;
