--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -24,11 +24,10 @@
 
     justify-content: flex-start;
 
-    background-color: $gray-light;
+    background-color: $very-light-white;
     background-image: url("../img/hero-mobile@1x.jpg");
+    background-position: 50% -18px;
     background-repeat: no-repeat;
-    background-position: 50% 0;
-    background-size: cover;
 
     @media (min-resolution: $retina-dppx) {
       background-image: url("../img/hero-mobile@2x.jpg");
