--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -105,6 +105,10 @@
     display: flex;
     flex-direction: column;
   }
+
+  &:focus .order-form__radio {
+    border: solid 2px $seafoam-blue;
+  }
 }
 
 .order-form__checkbox {
@@ -130,65 +134,6 @@
 
   overflow: hidden;
   cursor: pointer;
-}
-
-.order-form__input {
-  &--checkbox,
-  &--radio {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    clip: rect(0 0 0 0);
-  }
-
-  &--text {
-    width: 100%;
-    min-height: 50px;
-
-    font-size: 19px;
-    line-height: 1.06;
-    color: $black;
-
-    background-color: transparent;
-    box-shadow: inset 0 -2px 0 0 $black;
-    border: none;
-
-    outline: none;
-
-    &:hover,
-    &:focus {
-      box-shadow: inset 0 -2px 0 0 $seafoam-blue;
-    }
-
-    &::placeholder {
-      opacity: 0.3;
-      font-size: 17px;
-
-      color: rgba(68, 68, 68, 0.3);
-    }
-  }
-
-  &:checked + .order-form__radio::after {
-    display: block;
-  }
-
-  &:checked + .order-form__checkbox {
-    background-image: url("../img/icon-tick.svg");
-    background-repeat: no-repeat;
-    background-position: 50%;
-    background-size: 22px 16px;
-  }
-}
-
-.order-form__input-icon {
-  position: absolute;
-  right: 5px;
-  top: 50%;
-  transform: translateY(-50%);
-
-  fill: $black;
-  opacity: 0.2;
 }
 
 .order-form__radio {
@@ -233,6 +178,73 @@
 
     transform: translate3d(-50%, -50%, 0);
   }
+}
+
+.order-form__input {
+  &--text {
+    width: 100%;
+    min-height: 50px;
+
+    font-size: 19px;
+    line-height: 1.06;
+    color: $black;
+
+    background-color: transparent;
+    box-shadow: inset 0 -2px 0 0 $black;
+    border: none;
+
+    outline: none;
+
+    &:hover,
+    &:focus {
+      box-shadow: inset 0 -2px 0 0 $seafoam-blue;
+    }
+
+    &::placeholder {
+      opacity: 0.3;
+      font-size: 17px;
+
+      color: rgba(68, 68, 68, 0.3);
+    }
+  }
+
+  &--checkbox,
+  &--radio {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+  }
+
+  &:checked + .order-form__checkbox,
+  &:focus + .order-form__checkbox {
+    background-image: url("../img/icon-tick.svg");
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: 22px 16px;
+  }
+
+  &:checked + .order-form__radio {
+    &::after {
+      display: block;
+    }
+  }
+
+  &:focus + .order-form__radio,
+  &:focus + .order-form__checkbox {
+    border: solid 2px $seafoam-blue;
+  }
+}
+
+.order-form__input-icon {
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  fill: $black;
+  opacity: 0.2;
 }
 
 .order-form__textarea {
