- variables - веб-безопасные шрифты (фикс) - reviews - фоновый градиент позади картинки

--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -17,7 +17,7 @@ $black-lighen: rgba($black, 0.6);
 $black-very-lighen: rgba($black, 0.3);
 
 // fonts
-$font-family-default: "Open Sans", "Helvetica" "Arial", sans-serif;
+$font-family-default: "Open Sans", "Helvetica", "Arial", sans-serif;
 $font-weight-default: 400;
 $font-color-default: #444444;
 $font-size-default: 15px;
