--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -37,7 +37,7 @@
 
 @mixin zigzag-line {
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
 
   &::before {
     content: "";
@@ -51,24 +51,24 @@
 
     background-image: url("../img/bg-zigzag-line.svg");
     background-position: 0 0;
-    background-size: 100% 105%;
+    background-size: auto 100%;
     background-repeat: repeat-x;
   }
 
   @media (min-width: $desktop-width) {
     &::before {
-      left: 50%;
-      transform: translateX(-50%);
+      left: -100%;
 
-      max-width: 1052px;
+      width: 300%;
       height: 23px;
+
+      background-position: 0 0;
     }
   }
 }
 
 @mixin zigzag-fill {
   position: relative;
-  overflow: hidden;
 
   &::after {
     content: "";
