--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -69,9 +69,12 @@
       padding-bottom: 250px;
 
       background-image: url("../img/hero-tablet@1x.jpg");
+      background-position: center 0px;
 
       @media (min-resolution: $retina-dppx) {
         background-image: url("../img/hero-tablet@2x.jpg");
+        background-size: cover;
+        background-position: center 0px;
       }
     }
   }
@@ -106,9 +109,12 @@
       padding-top: 155px;
       padding-bottom: 250px;
       background-image: url("../img/hero-desktop@1x.jpg");
+      background-position: center 0px;
 
       @media (min-resolution: $retina-dppx) {
         background-image: url("../img/hero-desktop@2x.jpg");
+        background-size: 100%;
+        background-position: center 0px;
       }
     }
   }
