--- a/source/sass/blocks/how-its-done.scss
+++ b/source/sass/blocks/how-its-done.scss
@@ -12,6 +12,13 @@
   }
 }
 
+// .how-its-done__wrapper {
+//   width: 100%;
+//   height: 100%;
+
+//   position: relative;
+// }
+
 .how-its-done__image-wrapper {
   width: 100%;
 }
@@ -112,7 +119,11 @@
     position: relative;
 
     padding: 47px 57px 47px 66%;
-    margin: 0 50px 105px;
+    margin: 0 50px 100px;
+
+    max-width: 1050px;
+    margin-left: auto;
+    margin-right: auto;
 
     display: flex;
     flex-direction: column;
@@ -139,7 +150,7 @@
 
   .how-its-done__description {
     padding: 0;
-    margin-bottom: 44px;
+    margin-bottom: 40px;
 
     line-height: 2;
   }
