--- a/source/sass/blocks/products-list.scss
+++ b/source/sass/blocks/products-list.scss
@@ -44,6 +44,10 @@
     margin-top: 121px;
     margin-bottom: 2px;
 
+    max-width: 1150px;
+    margin-left: auto;
+    margin-right: auto;
+
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
